objects/Account__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Account</externalName>
    <fields>
        <fullName>ACH_Enabled_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACH_Enabled__c</externalDeveloperName>
        <label>ACH Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <externalDeveloperName>AccountNumber</externalDeveloperName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <externalDeveloperName>AccountSource</externalDeveloperName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Timezone_c__c</fullName>
        <externalDeveloperName>Account_Timezone__c</externalDeveloperName>
        <label>Account Timezone</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Divisions_c__c</fullName>
        <externalDeveloperName>Active_Divisions__c</externalDeveloperName>
        <label>Active Divisions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType_pc__c</fullName>
        <externalDeveloperName>AddressType__pc</externalDeveloperName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_NUM_pc__c</fullName>
        <externalDeveloperName>Age_NUM__pc</externalDeveloperName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apartment_NUM_pc__c</fullName>
        <externalDeveloperName>Apartment_NUM__pc</externalDeveloperName>
        <label>Appartment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Dreamforce_pc__c</fullName>
        <externalDeveloperName>Attended_Dreamforce__pc</externalDeveloperName>
        <label>Attended Dreamforce</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Dealer_Award_c__c</fullName>
        <externalDeveloperName>B2B_Dealer_Award__c</externalDeveloperName>
        <label>B2B Dealer Award</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Preferred_Carrier_c__c</fullName>
        <externalDeveloperName>B2B_Preferred_Carrier__c</externalDeveloperName>
        <label>Preferred Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>Billing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>Billing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                    <label>Near Address</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                    <label>Extended Zip</label>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BlackbookPrice_AMT_c__c</fullName>
        <externalDeveloperName>BlackbookPrice_AMT__c</externalDeveloperName>
        <label>Blackbook Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessUnit_TXT_c__c</fullName>
        <externalDeveloperName>BusinessUnit_TXT__c</externalDeveloperName>
        <label>Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUseType_TXT_pc__c</fullName>
        <externalDeveloperName>BusinessUseType_TXT__pc</externalDeveloperName>
        <label>Business Use Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Duplicate_Merge_Rule_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Bypass_Duplicate_Merge_Rule__c</externalDeveloperName>
        <label>Bypass Duplicate Merge Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CID_TXT_c__c</fullName>
        <externalDeveloperName>CID_TXT__c</externalDeveloperName>
        <label>CID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMTool_TXT_c__c</fullName>
        <externalDeveloperName>CRMTool_TXT__c</externalDeveloperName>
        <label>CRM Tool</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMVendorEff_Date_DT_c__c</fullName>
        <externalDeveloperName>CRMVendorEff_Date_DT__c</externalDeveloperName>
        <label>CRM Vendor Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_System_pc__c</fullName>
        <externalDeveloperName>CRM_System__pc</externalDeveloperName>
        <label>CRM System</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedEquity_AMT_c__c</fullName>
        <externalDeveloperName>CalculatedEquity_AMT__c</externalDeveloperName>
        <label>Calculated Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certification_Status_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Certification_Status__c</externalDeveloperName>
        <label>Certification Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChannelProgramLevelName__c</fullName>
        <externalDeveloperName>ChannelProgramLevelName</externalDeveloperName>
        <label>Channel Program Level Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelProgramName__c</fullName>
        <externalDeveloperName>ChannelProgramName</externalDeveloperName>
        <label>Channel Program Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_c__c</fullName>
        <externalDeveloperName>Channel__c</externalDeveloperName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Restocking_Fees_c__c</fullName>
        <externalDeveloperName>Charge_Restocking_Fees__c</externalDeveloperName>
        <label>Charge Restocking Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_NM_pc__c</fullName>
        <externalDeveloperName>Company_NM__pc</externalDeveloperName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Third_Party_for_Duplicate_Fla__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Compare_Third_Party_for_Duplicate_Flag__c</externalDeveloperName>
        <label>Compare Third Party for Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmInterestNotificationDate_c__c</fullName>
        <externalDeveloperName>ConfirmInterestNotificationDate__c</externalDeveloperName>
        <label>Confirm Interest Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactId_c__c</fullName>
        <externalDeveloperName>ContactId__c</externalDeveloperName>
        <label>Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Key_c__c</fullName>
        <externalDeveloperName>Contact_Key__c</externalDeveloperName>
        <label>Contact Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ctype_TXT_pc__c</fullName>
        <externalDeveloperName>Ctype_TXT__pc</externalDeveloperName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>Sales Manager/Internet Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Dealer Sales Admin</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Dealer_Order_Seq_Number_c__c</fullName>
        <externalDeveloperName>Current_Dealer_Order_Seq_Number__c</externalDeveloperName>
        <label>Current Dealer Order Seq Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DLPostalCodeRank_CD_RNK_c__c</fullName>
        <externalDeveloperName>DLPostalCodeRank_CD_RNK__c</externalDeveloperName>
        <label>Dealer Postal Code Ranking</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerAccessLevel_TXT_c__c</fullName>
        <externalDeveloperName>DealerAccessLevel_TXT__c</externalDeveloperName>
        <label>Dealer Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>Reporting Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerAttributes_NM_c__c</fullName>
        <externalDeveloperName>DealerAttributes_NM__c</externalDeveloperName>
        <label>Dealer Attributes (Name and Value)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCRMVendor_TXT_c__c</fullName>
        <externalDeveloperName>DealerCRMVendor_TXT__c</externalDeveloperName>
        <label>Dealer CRM Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCityStateRank_RNK_c__c</fullName>
        <externalDeveloperName>DealerCityStateRank_RNK__c</externalDeveloperName>
        <label>Dealer City State Ranking</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCode_CD_c__c</fullName>
        <externalDeveloperName>DealerCode_CD__c</externalDeveloperName>
        <label>Dealer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerDBAName_NM_c__c</fullName>
        <externalDeveloperName>DealerDBAName_NM__c</externalDeveloperName>
        <label>Dealer DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerDistrict_TXT_c__c</fullName>
        <externalDeveloperName>DealerDistrict_TXT__c</externalDeveloperName>
        <label>Dealer District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerLegalName_NM_c__c</fullName>
        <externalDeveloperName>DealerLegalName_NM__c</externalDeveloperName>
        <label>Dealer Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerNumber_NUM_pc__c</fullName>
        <externalDeveloperName>DealerNumber_NUM__pc</externalDeveloperName>
        <label>Dealer Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DealerWebsiteAddrs_c__c</fullName>
        <externalDeveloperName>DealerWebsiteAddrs__c</externalDeveloperName>
        <label>Dealer Website Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Metro_Name_c__c</fullName>
        <externalDeveloperName>Dealer_Metro_Name__c</externalDeveloperName>
        <label>Dealer Metro Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deduplication_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Deduplication__c</externalDeveloperName>
        <label>Deduplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Account Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <externalDeveloperName>Description__c</externalDeveloperName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DivisionCd_c__c</fullName>
        <externalDeveloperName>DivisionCd__c</externalDeveloperName>
        <label>DivisionCd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_c__c</fullName>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DreamStoreFlag_c__c</fullName>
        <externalDeveloperName>DreamStoreFlag__c</externalDeveloperName>
        <label>DreamStoreFlag</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dreamforce_pc__c</fullName>
        <externalDeveloperName>Dreamforce__pc</externalDeveloperName>
        <label>Dreamforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dreamshop_Setup_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Dreamshop_Setup__c</externalDeveloperName>
        <label>Dreamshop Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_ID_c__c</fullName>
        <externalDeveloperName>Email_ID__c</externalDeveloperName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_c__c</fullName>
        <externalDeveloperName>Email__c</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date_c__c</fullName>
        <externalDeveloperName>End_Date__c</externalDeveloperName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL_c__c</fullName>
        <externalDeveloperName>Endpoint_URL__c</externalDeveloperName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrichment_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Enrichment__c</externalDeveloperName>
        <label>Enrichment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EscalationEmailLevel1_c__c</fullName>
        <externalDeveloperName>EscalationEmailLevel1__c</externalDeveloperName>
        <label>Escalation Email Level 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EscalationEmailLevel2_c__c</fullName>
        <externalDeveloperName>EscalationEmailLevel2__c</externalDeveloperName>
        <label>Escalation Email Level 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_EngagementTrend_pc__c</fullName>
        <externalDeveloperName>Evergage_hondaauto_EngagementTrend__pc</externalDeveloperName>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Engagement_pc__c</fullName>
        <externalDeveloperName>Evergage_hondaauto_Engagement__pc</externalDeveloperName>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Filters_pc__c</fullName>
        <externalDeveloperName>Evergage_hondaauto_Filters__pc</externalDeveloperName>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_FirstActivity_pc__c</fullName>
        <externalDeveloperName>Evergage_hondaauto_FirstActivity__pc</externalDeveloperName>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_LastActivity_pc__c</fullName>
        <externalDeveloperName>Evergage_hondaauto_LastActivity__pc</externalDeveloperName>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Link_pc__c</fullName>
        <externalDeveloperName>Evergage_hondaauto_Link__pc</externalDeveloperName>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Scoring_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Exclude_from_Scoring_Flag__c</externalDeveloperName>
        <label>Exclude from Scoring Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Account Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_c__c</fullName>
        <externalDeveloperName>First_Name__c</externalDeveloperName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FriCloseHour_c__c</fullName>
        <externalDeveloperName>FriCloseHour__c</externalDeveloperName>
        <label>Fri Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FriOpenHour_c__c</fullName>
        <externalDeveloperName>FriOpenHour__c</externalDeveloperName>
        <label>Fri Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_TXT_pc__c</fullName>
        <externalDeveloperName>Gender_TXT__pc</externalDeveloperName>
        <label>Gender</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasPrivacyHold__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasPrivacyHold</externalDeveloperName>
        <label>Privacy Hold</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelmsCRMEligible_FLAG_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HelmsCRMEligible_FLAG__pc</externalDeveloperName>
        <label>HELMS Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HondaDigitalSolutions_FLG_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HondaDigitalSolutions_FLG__c</externalDeveloperName>
        <label>Honda Digital Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive_CD_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive_CD__c</externalDeveloperName>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive__c</externalDeveloperName>
        <label>Is BT Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBuyer__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsBuyer</externalDeveloperName>
        <label>Buyer Account</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCustomerPortal</externalDeveloperName>
        <label>Customer Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPartner</externalDeveloperName>
        <label>Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPersonAccount</externalDeveloperName>
        <label>Is Person Account</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Concierge_Process_Needed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Concierge_Process_Needed__c</externalDeveloperName>
        <label>Is Concierge Process Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Dreamshop_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Dreamshop__c</externalDeveloperName>
        <label>Is Dreamshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_For_Reserve_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_For_Reserve__c</externalDeveloperName>
        <inlineHelpText>For the Reserve Online Flow</inlineHelpText>
        <label>Is For Reserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Stop_Sent_To_eCRM_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Stop_Sent_To_eCRM__c</externalDeveloperName>
        <label>Is Stop Sent To eCRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Urgent_Priority_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Urgent_Priority__c</externalDeveloperName>
        <label>Is Urgent Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vehicle_Reserve_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Vehicle_Reserve__c</externalDeveloperName>
        <label>Is Vehicle Reserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <externalDeveloperName>JigsawCompanyId</externalDeveloperName>
        <label>Jigsaw Company ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastDateofService_DT_c__c</fullName>
        <externalDeveloperName>LastDateofService_DT__c</externalDeveloperName>
        <label>Last Date of Service</label>
        <type>Date</type>
    </fields>
</CustomObject>